--- a/WebContent/css/interface.css
+++ b/WebContent/css/interface.css
@@ -1,3 +1,7 @@
+/*body {
+	background: #102F0F;
+}*/
+
 .page-title {
 	margin-top: 50px;
 	margin-bottom: 50px;
@@ -5,10 +9,6 @@
 
 .navbar-nav .p {
 	width: 25px;
-}
-
-.smallest-body {
-	height: 515px;
 }
 
 .footer {
@@ -20,7 +20,10 @@
     list-style: none;
 }
 
-@media (min-width: 1440px) {
+@media (min-height: 785px) {
+	.personal-adaptor {
+		margin-bottom: 150px;
+	}
 	.footer {
 		position: fixed;
 		bottom: 0;
@@ -29,5 +32,12 @@
 	
 	.footer ul {
 		margin: auto;
+	}
+}
+
+@media(max-height: 784px) {
+	.empty-body {
+		/*height: 381px;*/
+		height: 421px;
 	}
 }
