--- a/WebContent/admin/css/index.css
+++ b/WebContent/admin/css/index.css
@@ -1,3 +1,12 @@
+.page-body {
+	margin-top: 50px;
+	margin-bottom: 247px;
+}
+
+.page-body .options-row {
+	margin-top: 25px;
+}
+
 .page-body .options-row .col-md-1 {
 	padding: 0;
 }
