--- a/WebContent/admin/css/trackspanel.css
+++ b/WebContent/admin/css/trackspanel.css
@@ -8,9 +8,14 @@
 }
 
 .result-body {
-	margin-bottom: 206px;
+	margin-bottom: 100px;
 }
 
 .result-row {
 	margin-top: 10px;
+}
+
+.msg-row {
+	color: red;
+	font-weight: bold;
 }
